--- a/Ecommerce/Areas/Admin/Views/Bodega/Index.cshtml
+++ b/Ecommerce/Areas/Admin/Views/Bodega/Index.cshtml
@@ -4,5 +4,31 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<div class="row">
+    <div class="col-lg-6">
+        <h2>Lista de bodegas</h2>
+    </div>
+    <div class="col-lg-6">
+        <a class="btn btn-outline-primary" asp-action="Upsert"> <i class="bi bi-plus-square-fill"></i> Agregar Bodega</a>
+    </div>
+</div>
 
+<div class="mt-4 p-4 border rounded bg-light">
+    <table id="dataTable" class="table table-responsive table-hover">
+        <thead class="table-dark">
+            <tr>
+                <th>Nombre</th>
+                <th>Descripcion</th>
+                <th>Estado</th>
+                <th class="text-center">Acción</th>
+            </tr>
+        </thead>
+        
+
+    </table>
+
+</div>
+
+@section Scripts{
+    <script src="~/js/bodega.js"></script>
+}
