--- a/Ecommerce/Areas/Inventario/Views/Home/Index.cshtml
+++ b/Ecommerce/Areas/Inventario/Views/Home/Index.cshtml
@@ -1,8 +1,56 @@
-﻿@{
+﻿@model IEnumerable<Ecommerce.Modelos.Producto>
+@using Ecommerce.Utilidades
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Bienvenido</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+
+<header class="header">
+    <div class=" pt-sm-5 pb-sm-5">
+        <div class="titulo">
+            <h1>Los Mejores Productos & </br>
+                Marcas en nuestra Tienda
+            </h1>
+        </div>
+    </div>
+</header>
+
+<section>
+    <div class="container mt-2" >
+        <!--SearchBar-->
+        <div class="col-lg-6 col-md-6 col-sm-6 d-flex">
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Buscar..." >
+                <button class="btn btn-outline-dark">
+                    <i class="bi bi-search"></i>
+                </button>
+            </div>
+        </div>
+
+        <!--Productos-->
+        <div class="row">
+            @foreach(var producto in Model)
+            {
+                <div class="col-lg-3 col-md-6 col-sm-6 d-flex">
+                    <div class="card w-100 mt-2">
+                        <img src="@DS.ImagenRuta@producto.ImagenUrl" class="card-img-top" style="aspect-ratio:1/1">
+                        <div class="card-body d-flex flex-column">
+                           <h5 class="card-title">
+                               @producto.Descripcion                                
+                           </h5>
+                           <p class="card-text">$ @String.Format("{0:#,##0.00}", producto.Precio)</p>
+                           <div class="card-footer d-flex align-items-end pt-3 pb-3  bg-white">
+                               <a href="#" class="btn btn-outline-dark">
+                                    <i class="bi bi-tag"></i> Detalle
+                               </a>
+                           </div>
+                       </div>
+                    </div>
+                </div>
+            }
+        </div>
+
+
+    </div>
+</section>
