--- a/Ecommerce/wwwroot/css/site.css
+++ b/Ecommerce/wwwroot/css/site.css
@@ -18,5 +18,21 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+   /* font-family: "Poppins", sans-serif;*/
+    font-family: "Marcellus", serif;
+}
+
+.header{
+    height:20vh;
+    background: linear-gradient(to right, #4800ff, white);
+    clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+}
+
+.titulo{
+    margin-left:15%;
+    color:white;
+    letter-spacing:0.5vh;
+    text-transform:uppercase;
+    
 }
