--- a/Ecommerce/Areas/Inventario/Views/Home/Index.cshtml
+++ b/Ecommerce/Areas/Inventario/Views/Home/Index.cshtml
@@ -19,14 +19,17 @@
 <section>
     <div class="container mt-2" >
         <!--SearchBar-->
-        <div class="col-lg-6 col-md-6 col-sm-6 d-flex">
-            <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Buscar..." >
-                <button class="btn btn-outline-dark">
-                    <i class="bi bi-search"></i>
-                </button>
+        <form asp-action="Index" method]="get">
+            <div class="col-lg-6 col-md-6 col-sm-6 d-flex">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Buscar..." 
+                     name="busqueda" value="@ViewData["BusquedaActual"]" >
+                    <button type="submit" class="btn btn-outline-dark">
+                        <i class="bi bi-search"></i>
+                    </button>
+                </div>
             </div>
-        </div>
+        </form>
 
         <!--Productos-->
         <div class="row">
@@ -52,24 +55,32 @@
         </div>
 
         <!-- Botones -->
-        <a asp-action="Index" asp-route-numeroPagina="@(1)" 
+        <a asp-action="Index" 
+            asp-route-numeroPagina="@(1)" 
+            asp-route-busquedaActual="@ViewData["BusquedaActual"]"
             class="btn btn-outline-dark"> 
             <i class="bi bi-skip-start-fill"></i>
         </a>
 
-        <a asp-action="Index" asp-route-numeroPagina="@((int)ViewData["NumeroPagina"]-1)"
+        <a asp-action="Index" 
+            asp-route-numeroPagina="@((int)ViewData["NumeroPagina"]-1)"
+           asp-route-busquedaActual="@ViewData["BusquedaActual"]"
             class="btn btn-outline-dark @ViewData["Previo"]">
             <i class="bi bi-caret-left-fill"></i>
         </a>
 
         <span>Pagina @ViewData["NumeroPagina"] de @ViewData["TotalPaginas"]</span>
 
-        <a asp-action="Index" asp-route-numeroPagina="@((int)ViewData["NumeroPagina"]+1)"
+        <a asp-action="Index" 
+            asp-route-numeroPagina="@((int)ViewData["NumeroPagina"]+1)"
+            asp-route-busquedaActual="@ViewData["BusquedaActual"]"
             class="btn btn-outline-dark @ViewData["Siguiente"]">
             <i class="bi bi-caret-right-fill"></i>
         </a>
            
-        <a asp-action="Index" asp-route-numeroPagina="@ViewData["TotalPaginas"]" 
+        <a asp-action="Index" 
+            asp-route-numeroPagina="@ViewData["TotalPaginas"]"
+            asp-route-busquedaActual="@ViewData["BusquedaActual"]"
             class="btn btn-outline-dark">
             <i class="bi bi-skip-end"></i>
         </a>
